--- a/job.html
+++ b/job.html
@@ -107,7 +107,7 @@
   </footer>
 
   <script src="assets/js/theme.js"></script>
-  <script src="assets/js/job.js"></script>
+  <script src="assets/js/job.js?v=2"></script>
 </body>
 </html>
 
