--- a/add.html
+++ b/add.html
@@ -52,12 +52,12 @@
     </div>
   </nav>
 
-  <main class="mx-auto max-w-3xl px-4 py-12 sm:px-6 lg:px-8">
-    <h1 class="text-3xl font-bold tracking-tight text-slate-900 sm:text-4xl">Contribute to the job board</h1>
-    <p class="mt-2 text-slate-600">You can add a job or create a seeker profile. For jobs, we recommend <strong>Quick add</strong> if the posting is on a supported site.</p>
+  <main class="mx-auto max-w-3xl px-4 py-12 sm:px-6 lg:px-8 space-y-8">
+    <h1 class="text-3xl font-bold tracking-tight text-slate-900 dark:text-gray-100 sm:text-4xl">Contribute to the job board</h1>
+    <p class="mt-2 text-slate-600 dark:text-gray-400">You can add a job or create a seeker profile. For jobs, we recommend <strong class="dark:text-gray-200">Quick add</strong> if the posting is on a supported site.</p>
 
           <!-- Quick add (recommended) -->
-          <section class="bg-white dark:bg-gray-800 rounded-xl shadow-sm border border-gray-200 dark:border-gray-700 p-6 mb-8 transition-colors duration-200">
+          <section class="bg-white dark:bg-gray-800 rounded-xl shadow-sm border border-gray-200 dark:border-gray-700 p-6 transition-colors duration-200">
             <div class="flex items-center gap-2 mb-2">
               <span class="text-xs font-semibold uppercase tracking-wide text-[#e74c3c] dark:text-[#e74c3c]">Recommended</span>
             </div>
@@ -91,7 +91,7 @@
           </section>
 
           <!-- Seeker profiles -->
-          <section id="seekers" class="bg-white dark:bg-gray-800 rounded-xl shadow-sm border border-gray-200 dark:border-gray-700 p-6 mt-8 transition-colors duration-200">
+          <section id="seekers" class="bg-white dark:bg-gray-800 rounded-xl shadow-sm border border-gray-200 dark:border-gray-700 p-6 transition-colors duration-200">
             <h2 class="text-xl font-bold text-gray-900 dark:text-gray-100 mb-3">Create a job seeker profile</h2>
             <p class="text-gray-600 dark:text-gray-400 mb-4">
               If you're looking for opportunities, you can create a public profile that appears on the
